# mapnik

./: CMakeLists.txt  CMakePresets.json
.github/actions/run_tests/: action.yml
.github/workflows/: build_and_test.yml  release_linux.yml
plugins/input/csv/: csv_utils.cpp
utils/: CMakeLists.txt
utils/mapnik-config/: .gitignore  CMakeLists.txt  mapnik-config.in.cpp
